--- a/client/src/styles/pages/_home.scss
+++ b/client/src/styles/pages/_home.scss
@@ -337,5 +337,13 @@
         text-align: center;
       }
     }
+    &__input_form {
+      width: 90%;
+      margin: 1.5em auto;
+      &__button {
+        margin-top: 1em;
+        width: 100%;
+      }
+    }
   }
 }
