Added BarCode Scanner

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -70,6 +70,8 @@ img {
 @import "./modal";
 @import "./form";
 @import "./loading";
+@import "./ant";
 
 // Pages
 @import "./pages/_home";
+@import "./pages/_sale";
