--- a/client/src/styles/pages/_logs.scss
+++ b/client/src/styles/pages/_logs.scss
@@ -1,11 +1,13 @@
 .logs {
-  width: 95%;
-  margin: 0 auto;
-  height: 200vh;
+  width: 100%;
+  // margin: 0 auto;
+  height: 100vh;
+  display: flex;
+  justify-content: space-between;
   &__sale_logs {
     margin-top: 3em;
     padding-block: 2em;
-    width: 100%;
+    width: 90%;
     box-shadow: 0px 4px 22px 0px rgba(21, 122, 254, 0.15);
     &__header,
     &__table {
@@ -22,7 +24,7 @@
     &__table {
       margin-top: 2em;
       &__header {
-        background: rgba(217, 217, 217, 0.28);
+        background: #d9d9d947;
         margin-bottom: 1em;
       }
       &__header,
@@ -56,7 +58,6 @@
         &-selected {
           box-shadow: -1px -1px 7px 2px rgba(0, 0, 0, 0.089) inset;
           & > div:last-child {
-            background-color: black;
             width: 100%;
           }
         }
